--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-hello world
-<p>Webサイトが表示されるまでの流れ〜WebサーバーDNSサーバーまで〜
+<h1>hello world</h1>
+<p>Webサイトが表示されるまでの流れ〜WebサーバーDNSサーバーまで〜</p>
 <img src="i2124081.png">
